k8s/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: demo-app
spec:
  type: NodePort
  selector:
    app: jenkins
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 32000
